# sierra-compiler

examples/: sieve-of-eratosthenes.sierra
scc/: Cargo.toml  data.txt
scc/sierra-parser/: Cargo.toml
scc/sierra-parser/src/: lib.rs
scc/sierra-parser/src/common/: mod.rs
scc/sierra-parser/src/lexer/: mod.rs  source_code_string.rs  source_code_text.rs  token.rs
scc/sierra-parser/src/parser/: mod.rs
scc/src/: main.rs
sierra-lsp/: Cargo.toml  sierra.lua
sierra-lsp/src/: main.rs
tree-sitter-sierra/: .gitignore  grammar.js
