[package]
name = "scc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["clap_derive", "env", "derive"] }
sierra-parser = { version = "0.1.0", path = "sierra-parser" }
