[package]
name = "sierra-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tokio-macros = "1.7.0"
tokio-util = "0.7.2"
tower = "0.4.12"
tower-lsp = "0.17.0"
tracing-subscriber = "0.3.11"
